@@ -51,7 +51,7 @@ test4_SOURCES = test4.c
 test5_SOURCES = test5.c
 
 test6_SOURCES = test6.c
-test6_CFLAGS = $(CFLAGS) -DQUESOGLC_VERSION=\"@PACKAGE_VERSION@\" -DGLEW_MX
+test6_CFLAGS = $(CFLAGS) -DQUESOGLC_VERSION=\"@PACKAGE_VERSION@\" @GLEW_CFLAGS@
 
 testcontex_SOURCES = testcontex.c
 
@@ -68,7 +68,8 @@ test8_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@
 test8_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_1_SOURCES = test9.c
-test9_1_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE -DWITH_GL_OBJECTS
+test9_1_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE \
+                 -DWITH_GL_OBJECTS
 test9_1_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_2_SOURCES = test9.c
@@ -76,15 +77,18 @@ test9_2_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE
 test9_2_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_3_SOURCES = test9.c
-test9_3_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE -DWITH_USER_LIST -DWITH_GL_OBJECTS
+test9_3_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE \
+                 -DWITH_USER_LIST -DWITH_GL_OBJECTS
 test9_3_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_4_SOURCES = test9.c
-test9_4_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE -DWITH_USER_LIST
+test9_4_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TEXTURE \
+                 -DWITH_USER_LIST
 test9_4_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_5_SOURCES = test9.c
-test9_5_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE -DWITH_GL_OBJECTS
+test9_5_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE \
+                 -DWITH_GL_OBJECTS
 test9_5_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_6_SOURCES = test9.c
@@ -92,11 +96,13 @@ test9_6_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE
 test9_6_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_7_SOURCES = test9.c
-test9_7_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE -DWITH_USER_LIST -DWITH_GL_OBJECTS
+test9_7_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE \
+                 -DWITH_USER_LIST -DWITH_GL_OBJECTS
 test9_7_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test9_8_SOURCES = test9.c
-test9_8_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE -DWITH_USER_LIST
+test9_8_CFLAGS = $(CFLAGS) @GLUT_CFLAGS@ -DRENDER_STYLE=GLC_TRIANGLE \
+                 -DWITH_USER_LIST
 test9_8_LDADD = @GLUT_LIBS@ $(LDADD)
 
 test10_SOURCES = test10.c
